generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Hall {
  hall_id   Int       @id @default(autoincrement())
  name_hall String    @unique @db.VarChar(30)
  type_hall String    @db.VarChar(30)
  showings  Showing[]
  seats     Seat[]

  @@map("HALL")
}

model Customer {
  customer_id   Int       @id @default(autoincrement())
  full_name     String    @db.VarChar(100)
  email_address String    @unique @db.VarChar(100)
  phone_number  String    @db.VarChar(15)
  is_active     Boolean   @default(true)
  deleted_at    DateTime? @db.Timestamptz
  bookings      Booking[]

  @@map("CUSTOMER")
}

model Movie {
  movie_id     Int          @id @default(autoincrement())
  title        String       @db.VarChar(40)
  release_date DateTime     @db.Date
  duration     Int
  rating       Decimal?     @db.Decimal(2, 1)
  genres       MovieGenre[]
  showings     Showing[]

  @@map("MOVIE")
}

model Genre {
  genre_id   Int          @id @default(autoincrement())
  genre_name String       @unique @db.VarChar(40)
  movies     MovieGenre[]

  @@map("GENRE")
}

model MovieGenre {
  movie_id Int
  genre_id Int
  movie    Movie @relation(fields: [movie_id], references: [movie_id], onDelete: Cascade)
  genre    Genre @relation(fields: [genre_id], references: [genre_id], onDelete: Cascade)

  @@id([movie_id, genre_id])
  @@map("MOVIE_GENRE")
}

model Showing {
  session_id Int      @id @default(autoincrement())
  movie_id   Int
  hall_id    Int
  start_time DateTime @db.Timestamptz
  created_at DateTime @default(now()) @db.Timestamptz
  updated_at DateTime @default(now()) @updatedAt @db.Timestamptz

  movie   Movie    @relation(fields: [movie_id], references: [movie_id], onDelete: Cascade)
  hall    Hall     @relation(fields: [hall_id], references: [hall_id])
  tickets Ticket[]

  @@unique([hall_id, start_time], name: "UQ_HallTime")
  @@index([hall_id, start_time])
  @@map("SHOWING")
}

model Seat {
  seat_id     Int      @id @default(autoincrement())
  hall_id     Int
  row_num     Int
  seat_number Int
  hall        Hall     @relation(fields: [hall_id], references: [hall_id])
  tickets     Ticket[]

  @@unique([hall_id, row_num, seat_number], name: "UQ_SeatLocation")
  @@index([hall_id])
  @@map("SEAT")
}

model Booking {
  booking_id   Int      @id @default(autoincrement())
  customer_id  Int
  booking_date DateTime @default(now()) @db.Timestamptz
  total_amount Decimal  @db.Decimal(8, 2)
  status       String   @default("Pending") @db.VarChar(20)
  created_at   DateTime @default(now()) @db.Timestamptz
  updated_at   DateTime @default(now()) @updatedAt @db.Timestamptz

  customer Customer @relation(fields: [customer_id], references: [customer_id])
  tickets  Ticket[]

  @@map("BOOKING")
}

model Ticket {
  ticket_id  Int      @id @default(autoincrement())
  booking_id Int
  session_id Int
  seat_id    Int
  price      Decimal  @db.Decimal(6, 2)
  status     String   @default("Paid") @db.VarChar(20)
  created_at DateTime @default(now()) @db.Timestamptz
  updated_at DateTime @default(now()) @updatedAt @db.Timestamptz

  booking Booking @relation(fields: [booking_id], references: [booking_id])
  showing Showing @relation(fields: [session_id], references: [session_id])
  seat    Seat    @relation(fields: [seat_id], references: [seat_id])

  @@unique([session_id, seat_id], name: "UQ_Ticket")
  @@index([session_id, seat_id])
  @@map("TICKET")
}
